--- a/content/W3(3.20).html
+++ b/content/W3(3.20).html
@@ -154,8 +154,14 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='W2(3.13).html'>Next</a> >> W2(3.13)<br /><h1>網管</h1>
-<br /> <a href='W2(3.13).html'>Next</a> >> W2(3.13)</div>
+    <div id="tipue_search_content">W2(3.13) << <a href='W2(3.13).html'>Previous</a> <a href='W4(3.27).html'>Next</a> >> W4(3.27)<br /><h1>W3(3.20)</h1>
+<p>筆記</p>
+<p>terminology 專業術語、<span>particular </span>特別、<span>technical </span>技術、<span>application </span>應用、</p>
+<p>software 軟體、<span>hardware </span>硬體、<span>firmwarre </span>韌體、<span>machine language </span>機器語言、</p>
+<p>URL:Uniform Resourse Locator  統一資源定位、<span>command wundow </span>命令視窗、<span>submodule </span>子模組</p>
+<p>程式令<span>:</span></p>
+<p>Y:←指<span>y</span>槽<span> Y:\   ←</span>表示<span>Y</span>槽的<span>root</span>根目錄<span> &gt; </span>為回應符號<span>(prormptsign)  \ </span>為<span>blackslash </span>反斜線<span> dir</span>為顯示目錄內容的指令<span> cd tmp </span>表示<span>change directory </span>到指定的目錄<span> git</span>為分散式版次管理的指令名稱<span> git clone</span>表示要使用<span>git</span>對遠端的倉儲進行<span>clone</span>。</p>
+<br />W2(3.13) << <a href='W2(3.13).html'>Previous</a> <a href='W4(3.27).html'>Next</a> >> W4(3.27)</div>
         
     <!-- footer -->
       <div class="container">
