--- a/content/W7(4.17).html
+++ b/content/W7(4.17).html
@@ -154,8 +154,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='W2(3.13).html'>Next</a> >> W2(3.13)<br /><h1>網管</h1>
-<br /> <a href='W2(3.13).html'>Next</a> >> W2(3.13)</div>
+    <div id="tipue_search_content">W6(4.10) << <a href='W6(4.10).html'>Previous</a> <a href='W8(4.24).html'>Next</a> >> W8(4.24)<br /><h1>W7(4.17)</h1>
+<p>abunta→遠端操控電腦、<span>asscii </span>美國標準交換資訊碼。<span> </span></p>
+<p>tmp&gt;wcmj2020&gt;init.py   更改網頁標題</p>
+<br />W6(4.10) << <a href='W6(4.10).html'>Previous</a> <a href='W8(4.24).html'>Next</a> >> W8(4.24)</div>
         
     <!-- footer -->
       <div class="container">
