--- a/content/W8(4.24).html
+++ b/content/W8(4.24).html
@@ -154,8 +154,22 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='W2(3.13).html'>Next</a> >> W2(3.13)<br /><h1>網管</h1>
-<br /> <a href='W2(3.13).html'>Next</a> >> W2(3.13)</div>
+    <div id="tipue_search_content">W7(4.17) << <a href='W7(4.17).html'>Previous</a> <br /><h1>W8(4.24)</h1>
+<p>網站<span>push</span>的步驟</p>
+<p>1.先把網站切成靜態<span>Home</span></p>
+<p>2.git add空格<span>.   →</span>意思是跟電腦說現在要讀的東西</p>
+<p>3.git comit -m"add w□" →跟電腦說你要讀的東西是什麼</p>
+<p>4.git push →推上動態網頁</p>
+<p>讓我們實作一次分組，弄<span><a href="http://meet.google.com/">meet.google.com</a></span>的實際操作。好讓下次上課可以線上上課。</p>
+<p> </p>
+<p> </p>
+<p> </p>
+<p><span> </span></p>
+</div>
+</div>
+</div>
+</div>
+</div><br />W7(4.17) << <a href='W7(4.17).html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
