--- a/config/content.htm
+++ b/config/content.htm
@@ -1,15 +1,59 @@
-<h1>About</h1>
-<p>此內容管理系統以 <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</p>
-<h4>利用 cmsimde 建立靜態網誌方法:</h4>
-<p>1. 在 github 建立倉儲, git clone 到近端</p>
-<p>2. 參考 <a href="https://github.com/mdecourse/newcms">https://github.com/mdecourse/newcms</a>, 加入除了 cmsimde 目錄外的所有內容</p>
-<p>以 git submodule add <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> cmsimde</p>
-<p>建立 cmsimde 目錄, 並從 github 取下子模組內容.</p>
-<p>3.在近端維護時, 更換目錄到倉儲中的 cmsimde, 以 python wsgi.py 啟動近端網際伺服器.</p>
-<p>動態內容編輯完成後, 以 generate_pages 轉為靜態內容, 以 git add commit 及 push 將內容推到遠端.</p>
-<p>4. 之後若要以 git clone 取下包含 submodule 的所有內容, 執行:</p>
-<p>git clone --recurse-submodules <a href="https://github.com/mdecourse/newcms.git">https://github.com/mdecourse/newcms.git</a></p>
-<h1>Develop</h1>
-<p><a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 的開發, 可以在一個目錄中放入 cmsimde, 然後將 up_dir 中的內容放到與 cmsimde 目錄同位階的地方, 使用 command 進入 cmsimde 目錄, 執行 python wsgi.py, 就可以啟動, 以瀏覽器 https://localhost:9443 就可以連接, 以 admin 作為管理者密碼, 就可以登入維護內容.</p>
-<p>cmsimde 的開發採用 Leo Editor, 開啟 cmsimde 目錄中的 cmsimde.leo 就可以進行程式修改, 結束後, 若要保留網際內容, 只要將 cmsimde 外部的內容倒回 up_dir 目錄中即可後續對 cmsimde 遠端倉儲進行改版.</p>
-<p>init.py 位於  up_dir 目錄, 可以設定 site_title 與 uwsgi 等變數.</p>
+<div class="gs">
+<div class="">
+<div class="ii gt" id=":m2">
+<div class="a3s aXjCH" id=":m1">
+<div dir="ltr">
+<h1>網管</h1>
+<h2>W2(3.13)</h2>
+<p>建網站</p>
+<p>此內容管理系統以<span> <a href="https://github.com/mdecourse/cmsimde">https:..github.com.mdecourse.cmsimde</a> </span>作為<span> submodule </span>運作<span>, </span>可以選定對應的版本運作<span>, cmsimde </span>可以持續改版<span>, </span>不會影響之前設為<span> submodule, </span>使用舊版<span> cmsimde </span>模組的內容管理相關運作<span>.</span></p>
+<p>利用<span> cmsimde </span>建立靜態網誌方法<span>:</span></p>
+<ol>
+<li>在<span> github </span>建立倉儲<span>, git clone </span>到近端</li>
+<li>參考<span><a href="https://github.com/mdecourse/newcms">https:..github.com.mdecourse.newcms</a>, </span>加入除了<span> cmsimde </span>目錄外的所有內容</li>
+</ol>
+<p>以<span> git submodule add <a href="https://github.com/mdecourse/cmsimde">https:..github.com.mdecourse.cmsimde</a> cmsimde</span></p>
+<p>建立<span> cmsimde </span>目錄<span>, </span>並從<span> github </span>取下子模組內容<span>.</span></p>
+<p>3.在近端維護時<span>, </span>更換目錄到倉儲中的<span> cmsimde, </span>以<span> python wsgi.py </span>啟動近端網際伺服器<span>.</span></p>
+<p>動態內容編輯完成後<span>, </span>以<span> generate_pages </span>轉為靜態內容<span>, </span>以<span> git add commit </span>及<span> push </span>將內容推到遠端<span>.</span></p>
+<ol start="4">
+<li>之後若要以<span> git clone </span>取下包含<span> submodule </span>的所有內容<span>, </span>執行<span>:</span></li>
+</ol>
+<p>git clone --recurse-submodules <a href="https://github.com/mdecourse/newcms.git">https:..github.com.mdecourse.newcms.git</a></p>
+<h2>W3(3.20)</h2>
+<p>筆記</p>
+<p>terminology 專業術語、<span>particular </span>特別、<span>technical </span>技術、<span>application </span>應用、</p>
+<p>software 軟體、<span>hardware </span>硬體、<span>firmwarre </span>韌體、<span>machine language </span>機器語言、</p>
+<p>URL:Uniform Resourse Locator  統一資源定位、<span>command wundow </span>命令視窗、<span>submodule </span>子模組</p>
+<p>程式令<span>:</span></p>
+<p>Y:←指<span>y</span>槽<span> Y:\   ←</span>表示<span>Y</span>槽的<span>root</span>根目錄<span> &gt; </span>為回應符號<span>(prormptsign)  \ </span>為<span>blackslash </span>反斜線<span> dir</span>為顯示目錄內容的指令<span> cd tmp </span>表示<span>change directory </span>到指定的目錄<span> git</span>為分散式版次管理的指令名稱<span> git clone</span>表示要使用<span>git</span>對遠端的倉儲進行<span>clone</span>。</p>
+<h2>W4(3.27)</h2>
+<p>portable 可攜、<span>Assembly </span>執行機器速度快但對硬體的相容性差、<span>objective -c</span></p>
+<p>→開發<span>iphone</span>的前一代程式、<span>compile </span>編譯、<span>interpret </span>解譯、<span>unix</span>電腦系統的一種、<span>shell </span>殼、<span>graphics </span>圖形、<span>device </span>物件、<span>interface </span>介面</p>
+<p>ps.c++ →加入物件功能的<span>C</span></p>
+<h2>W5(4.3)</h2>
+<p>掃墓<span>~~</span>休息</p>
+<h2>W6(4.10)</h2>
+<p>大致講解<span>↓</span>的用法和規格</p>
+<p>portable obs →直播軟體</p>
+<p><a href="http://meet.google.com/">meet.google.com</a>→google 的視訊軟體</p>
+<p> </p>
+<h2>W7(4.17)</h2>
+<p>abunta→遠端操控電腦、<span>asscii </span>美國標準交換資訊碼。<span> </span></p>
+<p>tmp&gt;wcmj2020&gt;init.py   更改網頁標題</p>
+<h2>W8(4.24)</h2>
+<p>網站<span>push</span>的步驟</p>
+<p>1.先把網站切成靜態<span>Home</span></p>
+<p>2.git add空格<span>.   →</span>意思是跟電腦說現在要讀的東西</p>
+<p>3.git comit -m"add w□" →跟電腦說你要讀的東西是什麼</p>
+<p>4.git push →推上動態網頁</p>
+<p>讓我們實作一次分組，弄<span><a href="http://meet.google.com/">meet.google.com</a></span>的實際操作。好讓下次上課可以線上上課。</p>
+<p> </p>
+<p> </p>
+<p> </p>
+<p><span> </span></p>
+</div>
+</div>
+</div>
+</div>
+</div>
