--- a/content/W2(3.13).html
+++ b/content/W2(3.13).html
@@ -154,8 +154,23 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='W2(3.13).html'>Next</a> >> W2(3.13)<br /><h1>網管</h1>
-<br /> <a href='W2(3.13).html'>Next</a> >> W2(3.13)</div>
+    <div id="tipue_search_content">網管 << <a href='網管.html'>Previous</a> <a href='W3(3.20).html'>Next</a> >> W3(3.20)<br /><h1>W2(3.13)</h1>
+<p>建網站</p>
+<p>此內容管理系統以<span> <a href="https://github.com/mdecourse/cmsimde">https:..github.com.mdecourse.cmsimde</a> </span>作為<span> submodule </span>運作<span>, </span>可以選定對應的版本運作<span>, cmsimde </span>可以持續改版<span>, </span>不會影響之前設為<span> submodule, </span>使用舊版<span> cmsimde </span>模組的內容管理相關運作<span>.</span></p>
+<p>利用<span> cmsimde </span>建立靜態網誌方法<span>:</span></p>
+<ol>
+<li>在<span> github </span>建立倉儲<span>, git clone </span>到近端</li>
+<li>參考<span><a href="https://github.com/mdecourse/newcms">https:..github.com.mdecourse.newcms</a>, </span>加入除了<span> cmsimde </span>目錄外的所有內容</li>
+</ol>
+<p>以<span> git submodule add <a href="https://github.com/mdecourse/cmsimde">https:..github.com.mdecourse.cmsimde</a> cmsimde</span></p>
+<p>建立<span> cmsimde </span>目錄<span>, </span>並從<span> github </span>取下子模組內容<span>.</span></p>
+<p>3.在近端維護時<span>, </span>更換目錄到倉儲中的<span> cmsimde, </span>以<span> python wsgi.py </span>啟動近端網際伺服器<span>.</span></p>
+<p>動態內容編輯完成後<span>, </span>以<span> generate_pages </span>轉為靜態內容<span>, </span>以<span> git add commit </span>及<span> push </span>將內容推到遠端<span>.</span></p>
+<ol start="4">
+<li>之後若要以<span> git clone </span>取下包含<span> submodule </span>的所有內容<span>, </span>執行<span>:</span></li>
+</ol>
+<p>git clone --recurse-submodules <a href="https://github.com/mdecourse/newcms.git">https:..github.com.mdecourse.newcms.git</a></p>
+<br />網管 << <a href='網管.html'>Previous</a> <a href='W3(3.20).html'>Next</a> >> W3(3.20)</div>
         
     <!-- footer -->
       <div class="container">
