--- a/content/W4(3.27).html
+++ b/content/W4(3.27).html
@@ -154,8 +154,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='W2(3.13).html'>Next</a> >> W2(3.13)<br /><h1>網管</h1>
-<br /> <a href='W2(3.13).html'>Next</a> >> W2(3.13)</div>
+    <div id="tipue_search_content">W3(3.20) << <a href='W3(3.20).html'>Previous</a> <a href='W5(4.3).html'>Next</a> >> W5(4.3)<br /><h1>W4(3.27)</h1>
+<p>portable 可攜、<span>Assembly </span>執行機器速度快但對硬體的相容性差、<span>objective -c</span></p>
+<p>→開發<span>iphone</span>的前一代程式、<span>compile </span>編譯、<span>interpret </span>解譯、<span>unix</span>電腦系統的一種、<span>shell </span>殼、<span>graphics </span>圖形、<span>device </span>物件、<span>interface </span>介面</p>
+<p>ps.c++ →加入物件功能的<span>C</span></p>
+<br />W3(3.20) << <a href='W3(3.20).html'>Previous</a> <a href='W5(4.3).html'>Next</a> >> W5(4.3)</div>
         
     <!-- footer -->
       <div class="container">
