--- a/content/W6(4.10).html
+++ b/content/W6(4.10).html
@@ -154,8 +154,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='W2(3.13).html'>Next</a> >> W2(3.13)<br /><h1>網管</h1>
-<br /> <a href='W2(3.13).html'>Next</a> >> W2(3.13)</div>
+    <div id="tipue_search_content">W5(4.3) << <a href='W5(4.3).html'>Previous</a> <a href='W7(4.17).html'>Next</a> >> W7(4.17)<br /><h1>W6(4.10)</h1>
+<p>大致講解<span>↓</span>的用法和規格</p>
+<p>portable obs →直播軟體</p>
+<p><a href="http://meet.google.com/">meet.google.com</a>→google 的視訊軟體</p>
+<p> </p>
+<br />W5(4.3) << <a href='W5(4.3).html'>Previous</a> <a href='W7(4.17).html'>Next</a> >> W7(4.17)</div>
         
     <!-- footer -->
       <div class="container">
