--- a/content/sitemap.html
+++ b/content/sitemap.html
@@ -142,7 +142,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='網管.html'>網管</a><ul class='dropdown'><li><a href='W2(3.13).html'>W2(3.13)</a><li><a href='W3(3.20).html'>W3(3.20)</a><li><a href='W4(3.27).html'>W4(3.27)</a><li><a href='W5(4.3).html'>W5(4.3)</a><li><a href='W6(4.10).html'>W6(4.10)</a><li><a href='W7(4.17).html'>W7(4.17)</a><li><a href='W8(4.24).html'>W8(4.24)</a></li>
+                     <li class='has-children'><a href='網管.html'>網管</a><ul class='dropdown'><li><a href='W2(3.13).html'>W2(3.13)</a><li><a href='W3(3.20).html'>W3(3.20)</a><li><a href='W4(3.27).html'>W4(3.27)</a><li><a href='W5(4.3).html'>W5(4.3)</a><li><a href='W6(4.10).html'>W6(4.10)</a><li><a href='W7(4.17).html'>W7(4.17)</a><li><a href='W8(4.24).html'>W8(4.24)</a><li><a href='W9(5.1).html'>W9(5.1)</a></li></ul><li><a href='電腦軟體與硬體簡介.html'>電腦軟體與硬體簡介</a><li class='has-children'><a href='網路架構與設定簡介.html'>網路架構與設定簡介</a><ul class='dropdown'><li><a href='W10(5.8).html'>W10(5.8)</a><li><a href='W12(5.15).html'>W12(5.15)</a><li><a href='W13(5.22).html'>W13(5.22)</a><li><a href='W14(5.29).html'>W14(5.29)</a></li></ul><li><a href='MacBook 操作指南.html'>MacBook 操作指南</a><li><a href='直接在操作系統建立網際內容管理合用系統.html'>直接在操作系統建立網際內容管理合用系統</a></li>
                       </ul>
                 </nav>
               </div>
@@ -153,4 +153,4 @@ img.add_border {
           </div>
           
         </header>
-    </nav><section><h1>Site Map</h1><div id="tipue_search_content"></div><ul><li><a href='網管.html'>網管</a><ul><li><a href='W2(3.13).html'>W2(3.13)</a><li><a href='W3(3.20).html'>W3(3.20)</a><li><a href='W4(3.27).html'>W4(3.27)</a><li><a href='W5(4.3).html'>W5(4.3)</a><li><a href='W6(4.10).html'>W6(4.10)</a><li><a href='W7(4.17).html'>W7(4.17)</a><li><a href='W8(4.24).html'>W8(4.24)</a></li></ul></section></div></body></html>
+    </nav><section><h1>Site Map</h1><div id="tipue_search_content"></div><ul><li><a href='網管.html'>網管</a><ul><li><a href='W2(3.13).html'>W2(3.13)</a><li><a href='W3(3.20).html'>W3(3.20)</a><li><a href='W4(3.27).html'>W4(3.27)</a><li><a href='W5(4.3).html'>W5(4.3)</a><li><a href='W6(4.10).html'>W6(4.10)</a><li><a href='W7(4.17).html'>W7(4.17)</a><li><a href='W8(4.24).html'>W8(4.24)</a><li><a href='W9(5.1).html'>W9(5.1)</a></li></ul><li><a href='電腦軟體與硬體簡介.html'>電腦軟體與硬體簡介</a><li><a href='網路架構與設定簡介.html'>網路架構與設定簡介</a><ul><li><a href='W10(5.8).html'>W10(5.8)</a><li><a href='W12(5.15).html'>W12(5.15)</a><li><a href='W13(5.22).html'>W13(5.22)</a><li><a href='W14(5.29).html'>W14(5.29)</a></li></ul><li><a href='MacBook 操作指南.html'>MacBook 操作指南</a><li><a href='直接在操作系統建立網際內容管理合用系統.html'>直接在操作系統建立網際內容管理合用系統</a></li></ul></section></div></body></html>
