--- a/content/W8(4.24).html
+++ b/content/W8(4.24).html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='網管.html'>網管</a><ul class='dropdown'><li><a href='W2(3.13).html'>W2(3.13)</a><li><a href='W3(3.20).html'>W3(3.20)</a><li><a href='W4(3.27).html'>W4(3.27)</a><li><a href='W5(4.3).html'>W5(4.3)</a><li><a href='W6(4.10).html'>W6(4.10)</a><li><a href='W7(4.17).html'>W7(4.17)</a><li><a href='W8(4.24).html'>W8(4.24)</a></li>
+                     <li class='has-children'><a href='網管.html'>網管</a><ul class='dropdown'><li><a href='W2(3.13).html'>W2(3.13)</a><li><a href='W3(3.20).html'>W3(3.20)</a><li><a href='W4(3.27).html'>W4(3.27)</a><li><a href='W5(4.3).html'>W5(4.3)</a><li><a href='W6(4.10).html'>W6(4.10)</a><li><a href='W7(4.17).html'>W7(4.17)</a><li><a href='W8(4.24).html'>W8(4.24)</a><li><a href='W9(5.1).html'>W9(5.1)</a></li></ul><li><a href='電腦軟體與硬體簡介.html'>電腦軟體與硬體簡介</a><li class='has-children'><a href='網路架構與設定簡介.html'>網路架構與設定簡介</a><ul class='dropdown'><li><a href='W10(5.8).html'>W10(5.8)</a><li><a href='W12(5.15).html'>W12(5.15)</a><li><a href='W13(5.22).html'>W13(5.22)</a><li><a href='W14(5.29).html'>W14(5.29)</a></li></ul><li><a href='MacBook 操作指南.html'>MacBook 操作指南</a><li><a href='直接在操作系統建立網際內容管理合用系統.html'>直接在操作系統建立網際內容管理合用系統</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,22 +154,16 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W7(4.17) << <a href='W7(4.17).html'>Previous</a> <br /><h1>W8(4.24)</h1>
-<p>網站<span>push</span>的步驟</p>
+    <div id="tipue_search_content">W7(4.17) << <a href='W7(4.17).html'>Previous</a> <a href='W9(5.1).html'>Next</a> >> W9(5.1)<br /><h1>W8(4.24)</h1>
+<br/>網站<span>push</span>的步驟
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false"></pre>
 <p>1.先把網站切成靜態<span>Home</span></p>
 <p>2.git add空格<span>.   →</span>意思是跟電腦說現在要讀的東西</p>
 <p>3.git comit -m"add w□" →跟電腦說你要讀的東西是什麼</p>
 <p>4.git push →推上動態網頁</p>
 <p>讓我們實作一次分組，弄<span><a href="http://meet.google.com/">meet.google.com</a></span>的實際操作。好讓下次上課可以線上上課。</p>
 <p> </p>
-<p> </p>
-<p> </p>
-<p><span> </span></p>
-</div>
-</div>
-</div>
-</div>
-</div><br />W7(4.17) << <a href='W7(4.17).html'>Previous</a> </div>
+<br />W7(4.17) << <a href='W7(4.17).html'>Previous</a> <a href='W9(5.1).html'>Next</a> >> W9(5.1)</div>
         
     <!-- footer -->
       <div class="container">
